phase 1 and 4 done