@@ -2,6 +2,7 @@ package com.cynera.backend.detection.service;
 
 import com.cynera.backend.detection.dto.DetectionResponse;
 import com.cynera.backend.detection.entity.Detection;
+import com.cynera.backend.detection.entity.SecurityIncident;
 import com.cynera.backend.detection.model.Severity;
 import com.cynera.backend.detection.repository.DetectionRepository;
 import com.cynera.backend.event.entity.SecurityEvent;
@@ -30,10 +31,10 @@ class DetectionServiceTest {
     private SecurityEventRepository securityEventRepository;
 
     @Mock
-    private DetectionRule detectionRule;
+    private SecurityIncidentService securityIncidentService;
 
     @Mock
-    private SecurityEvent event;
+    private DetectionRule detectionRule;
 
     private DetectionService detectionService;
 
@@ -42,57 +43,229 @@ class DetectionServiceTest {
         detectionService = new DetectionService(
                 detectionRepository,
                 securityEventRepository,
+                securityIncidentService,
                 List.of(detectionRule)
         );
     }
 
     @Test
-    void shouldEvaluateMatchingRuleAndCreateDetection() {
-        when(event.getId()).thenReturn(1L);
-
-        when(detectionRule.getRuleName())
-                .thenReturn("TEST_RULE");
-
-        when(detectionRule.evaluate(event))
-                .thenReturn(Optional.of(
-                        new DetectionMatch(
-                                Severity.HIGH,
-                                "Test detection"
-                        )
-                ));
+    void shouldCreateDetection() {
+        SecurityEvent event = new SecurityEvent(
+                Instant.parse("2026-09-02T10:00:00Z"),
+                "PROCESS_CREATED",
+                "DESKTOP-01",
+                "ana",
+                "powershell.exe",
+                "explorer.exe"
+        );
 
         when(securityEventRepository.findById(1L))
                 .thenReturn(Optional.of(event));
 
         when(detectionRepository.findByEventIdAndRule(
                 1L,
-                "TEST_RULE"
+                "SUSPICIOUS_POWERSHELL"
+        )).thenReturn(Optional.empty());
+
+        Detection detection = new Detection(
+                event,
+                "SUSPICIOUS_POWERSHELL",
+                Severity.MEDIUM,
+                "PowerShell execution detected",
+                Instant.parse("2026-09-02T10:00:01Z")
+        );
+
+        when(detectionRepository.save(any(Detection.class)))
+                .thenReturn(detection);
+
+        DetectionResponse response =
+                detectionService.createDetection(
+                        1L,
+                        "SUSPICIOUS_POWERSHELL",
+                        Severity.MEDIUM,
+                        "PowerShell execution detected"
+                );
+
+        assertEquals(
+                "SUSPICIOUS_POWERSHELL",
+                response.rule()
+        );
+
+        assertEquals(
+                Severity.MEDIUM,
+                response.severity()
+        );
+
+        assertEquals(
+                "PowerShell execution detected",
+                response.description()
+        );
+
+        verify(detectionRepository)
+                .save(any(Detection.class));
+
+        verifyNoInteractions(securityIncidentService);
+    }
+
+    @Test
+    void shouldReturnExistingDetection() {
+        SecurityEvent event = new SecurityEvent(
+                Instant.parse("2026-09-02T10:00:00Z"),
+                "PROCESS_CREATED",
+                "DESKTOP-01",
+                "ana",
+                "powershell.exe",
+                "explorer.exe"
+        );
+
+        Detection existingDetection = new Detection(
+                event,
+                "SUSPICIOUS_POWERSHELL",
+                Severity.MEDIUM,
+                "PowerShell execution detected",
+                Instant.parse("2026-09-02T10:00:01Z")
+        );
+
+        when(securityEventRepository.findById(1L))
+                .thenReturn(Optional.of(event));
+
+        when(detectionRepository.findByEventIdAndRule(
+                1L,
+                "SUSPICIOUS_POWERSHELL"
+        )).thenReturn(Optional.of(existingDetection));
+
+        DetectionResponse response =
+                detectionService.createDetection(
+                        1L,
+                        "SUSPICIOUS_POWERSHELL",
+                        Severity.MEDIUM,
+                        "PowerShell execution detected"
+                );
+
+        assertEquals(
+                "SUSPICIOUS_POWERSHELL",
+                response.rule()
+        );
+
+        verify(detectionRepository, never())
+                .save(any(Detection.class));
+
+        verifyNoInteractions(securityIncidentService);
+    }
+
+    @Test
+    void shouldThrowWhenEventDoesNotExist() {
+        when(securityEventRepository.findById(999L))
+                .thenReturn(Optional.empty());
+
+        IllegalArgumentException exception =
+                assertThrows(
+                        IllegalArgumentException.class,
+                        () -> detectionService.createDetection(
+                                999L,
+                                "TEST_RULE",
+                                Severity.LOW,
+                                "Test description"
+                        )
+                );
+
+        assertEquals(
+                "Security event not found: 999",
+                exception.getMessage()
+        );
+
+        verifyNoInteractions(detectionRepository);
+        verifyNoInteractions(securityIncidentService);
+    }
+
+    @Test
+    void shouldEvaluateEventAndCreateIncident() {
+        SecurityEvent event = new SecurityEvent(
+                Instant.parse("2026-09-02T10:00:00Z"),
+                "PROCESS_CREATED",
+                "DESKTOP-01",
+                "ana",
+                "powershell.exe",
+                "explorer.exe"
+        );
+
+        DetectionMatch match = new DetectionMatch(
+                Severity.HIGH,
+                "PowerShell execution detected"
+        );
+
+        when(detectionRule.evaluate(event))
+                .thenReturn(Optional.of(match));
+
+        when(detectionRule.getRuleName())
+                .thenReturn("SUSPICIOUS_POWERSHELL");
+
+        Detection detection = new Detection(
+                event,
+                "SUSPICIOUS_POWERSHELL",
+                Severity.HIGH,
+                "PowerShell execution detected",
+                Instant.parse("2026-09-02T10:00:01Z")
+        );
+
+        when(detectionRepository.findByEventIdAndRule(
+                event.getId(),
+                "SUSPICIOUS_POWERSHELL"
         )).thenReturn(Optional.empty());
 
         when(detectionRepository.save(any(Detection.class)))
-                .thenAnswer(invocation -> invocation.getArgument(0));
+                .thenReturn(detection);
+
+        SecurityIncident incident = new SecurityIncident(
+                "DESKTOP-01",
+                "ana",
+                com.cynera.backend.detection.model.RiskScore.HIGH,
+                Instant.parse("2026-09-02T10:00:02Z")
+        );
+
+        when(securityIncidentService.createIncident(
+                eq("DESKTOP-01"),
+                eq("ana"),
+                anyList()
+        )).thenReturn(incident);
 
         List<DetectionResponse> responses =
                 detectionService.evaluateEvent(event);
 
         assertEquals(1, responses.size());
 
-        DetectionResponse response = responses.getFirst();
+        assertEquals(
+                "SUSPICIOUS_POWERSHELL",
+                responses.get(0).rule()
+        );
 
-        assertEquals(1L, response.eventId());
-        assertEquals("TEST_RULE", response.rule());
-        assertEquals(Severity.HIGH, response.severity());
-        assertEquals("Test detection", response.description());
+        assertEquals(
+                Severity.HIGH,
+                responses.get(0).severity()
+        );
 
-        verify(detectionRule).evaluate(event);
-        verify(securityEventRepository).findById(1L);
         verify(detectionRepository)
-                .findByEventIdAndRule(1L, "TEST_RULE");
-        verify(detectionRepository).save(any(Detection.class));
+                .save(any(Detection.class));
+
+        verify(securityIncidentService)
+                .createIncident(
+                        eq("DESKTOP-01"),
+                        eq("ana"),
+                        anyList()
+                );
     }
 
     @Test
-    void shouldIgnoreRuleWhenThereIsNoMatch() {
+    void shouldNotCreateIncidentWhenNoRuleMatches() {
+        SecurityEvent event = new SecurityEvent(
+                Instant.parse("2026-09-02T10:00:00Z"),
+                "PROCESS_CREATED",
+                "DESKTOP-01",
+                "ana",
+                "notepad.exe",
+                "explorer.exe"
+        );
+
         when(detectionRule.evaluate(event))
                 .thenReturn(Optional.empty());
 
@@ -101,91 +274,7 @@ class DetectionServiceTest {
 
         assertTrue(responses.isEmpty());
 
-        verify(detectionRule).evaluate(event);
-
-        verifyNoInteractions(
-                securityEventRepository,
-                detectionRepository
-        );
-    }
-
-    @Test
-    void shouldReturnExistingDetectionAndNotCreateDuplicate() {
-        when(event.getId()).thenReturn(1L);
-
-        when(detectionRule.getRuleName())
-                .thenReturn("TEST_RULE");
-
-        when(detectionRule.evaluate(event))
-                .thenReturn(Optional.of(
-                        new DetectionMatch(
-                                Severity.HIGH,
-                                "Test detection"
-                        )
-                ));
-
-        when(securityEventRepository.findById(1L))
-                .thenReturn(Optional.of(event));
-
-        Detection existingDetection = new Detection(
-                event,
-                "TEST_RULE",
-                Severity.HIGH,
-                "Test detection",
-                Instant.parse("2026-09-01T12:00:00Z")
-        );
-
-        when(detectionRepository.findByEventIdAndRule(
-                1L,
-                "TEST_RULE"
-        )).thenReturn(Optional.of(existingDetection));
-
-        List<DetectionResponse> responses =
-                detectionService.evaluateEvent(event);
-
-        assertEquals(1, responses.size());
-
-        DetectionResponse response = responses.getFirst();
-
-        assertEquals(1L, response.eventId());
-        assertEquals("TEST_RULE", response.rule());
-        assertEquals(Severity.HIGH, response.severity());
-        assertEquals("Test detection", response.description());
-
-        verify(detectionRepository)
-                .findByEventIdAndRule(1L, "TEST_RULE");
-
-        verify(detectionRepository, never())
-                .save(any(Detection.class));
-    }
-
-    @Test
-    void shouldGetAllDetections() {
-        when(event.getId()).thenReturn(1L);
-
-        Detection detection = new Detection(
-                event,
-                "TEST_RULE",
-                Severity.MEDIUM,
-                "Test detection",
-                Instant.parse("2026-09-01T12:00:00Z")
-        );
-
-        when(detectionRepository.findAll())
-                .thenReturn(List.of(detection));
-
-        List<DetectionResponse> responses =
-                detectionService.getAllDetections();
-
-        assertEquals(1, responses.size());
-
-        DetectionResponse response = responses.getFirst();
-
-        assertEquals(1L, response.eventId());
-        assertEquals("TEST_RULE", response.rule());
-        assertEquals(Severity.MEDIUM, response.severity());
-        assertEquals("Test detection", response.description());
-
-        verify(detectionRepository).findAll();
+        verifyNoInteractions(detectionRepository);
+        verifyNoInteractions(securityIncidentService);
     }
 }
